--- a/QADraft/wwwroot/css/site.css
+++ b/QADraft/wwwroot/css/site.css
@@ -137,108 +137,6 @@ body {
     border-radius: 5px;
 }
 
-/*
-    .buttons:hover {
-        color: #fff;
-        background-color: #b31f4f;
-        border-color: #E6A65D;
-        box-shadow: 0 0 5px rgba(230, 168, 93, 0.7);
-    }
-
-    .buttons:active {
-        transform: translateY(1px) translateX(1px) !important;
-        color: #fff;
-        background-color: #b31f4f;
-        border-color: #E6A65D;
-    }
-
-    .buttons[disabled] {
-        background-color: #ccc;
-        color: #666;
-        cursor: not-allowed;
-        opacity: 0.6;
-    }
-*/
-
-/*.test-theme-buttons {
-    display: inline-block;
-    color: #fff;
-    background-color: #87909A;
-    border-color: #87909A;
-    padding: 8px 12px;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    text-align: center;
-    vertical-align: middle;
-    text-decoration: none;
-    cursor: pointer;
-    border-color: transparent;
-    border-radius: 5px;
-}
-
-    .test-theme-buttons:hover {
-        color: #fff;
-        background-color: #C5CFDA;
-        border-color: #E6A65D;
-        box-shadow: 0 0 5px rgba(230, 168, 93, 0.7);
-    }
-
-    .test-theme-buttons:active {
-        transform: translateY(1px) translateX(1px) !important;
-        color: #fff;
-        background-color: #C5CFDA;
-        border-color: #E6A65D;
-    }
-
-    .test-theme-buttons[disabled] {
-        background-color: #ccc;
-        color: #666;
-        cursor: not-allowed;
-        opacity: 0.6;
-    }
-
-.test-theme-navbar {
-    background-color: #87909A;
-    padding: 10px;
-    vertical-align: middle;
-    border-bottom: 3px solid rgba(0, 0, 0, 0.3);
-    z-index: 1;
-/
-
-.default-theme {
-    background-color: #861F41;
-    color: #fff;
-}
-
-.default-theme-buttons {
-    border-color: #861F41;
-}
-
-
-
-.test-theme {
-    background-color: #6b6b6b;
-}
-
-.test-theme-buttons {
-    display: inline-block;
-    color: #fff;
-    background-color: #6b6b6b;
-    border-color: #6b6b6b;
-    padding: 8px 12px;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    text-align: center;
-    vertical-align: middle;
-    text-decoration: none;
-    cursor: pointer;
-    border-color: transparent;
-    border-radius: 5px;
-}
-    */
-
 .buttons-accent {
     display: inline-block;
     color: #fff;
@@ -272,14 +170,7 @@ body {
 
 
 
-.button-for-current-page {
-    background-image: radial-gradient(circle, rgba(230, 168, 93, 0.3), rgba(230, 168, 93, 0.6));
-    background-size: 200% 200%;
-    background-position: center;
-    transition: background-position 1s;
 
-    /*background-color: #703146; */
-}
 
 header {
     margin-bottom: 20px;
@@ -309,10 +200,6 @@ header {
 /* From ReportsMenu */
 .table-qa {
     padding: .5rem .5rem;
-    padding-top: 0.5rem;
-    padding-right: 0.5rem;
-    padding-bottom: 0.5rem;
-    padding-left: 0.5rem;
     width: 100%;
 }
 
@@ -333,6 +220,10 @@ header {
         vertical-align: middle;
         padding: 12px 0;
     }
+
+        .table-qa td:nth-child(n+1):nth-child(-n+4) {
+            padding-left: 10px;
+        }
 
         .table-qa td:nth-child(5) {
             width: 80px;
@@ -364,20 +255,15 @@ header {
 
     .table-your-qas tr {
         height: 50px;
-        border-bottom: 1px solid #aaaaaa;
     }
-
-        .table-your-qas tr:nth-child(even) {
-            background-color: #eaeaea;
-        }
-
-        .table-your-qas tr:nth-child(odd) {
-            background-color: #f5f5f5;
-        }
 
     .table-your-qas td {
         vertical-align: middle
     }
+
+        .table-your-qas td:nth-child(n+1):nth-child(-n+4) {
+            padding-left: 10px;
+        }
         
         .table-your-qas td:nth-child(3) {
             width: 80px;
@@ -449,9 +335,7 @@ th {
 }
 
     .dashboard .container {
-        max-width: 100vw; /* override the max width to be 100% of the screen */
-
-        /* test */
+        max-width: 100vw;
         margin-bottom: 85px;
     }
 
@@ -461,7 +345,7 @@ th {
 
 .modal-footer {
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr; /* Two equal columns */
+    grid-template-columns: 1fr 2fr 1fr;
 }
 
 .text-center {
@@ -478,8 +362,6 @@ th {
 
 /* Styles for the external links bar (vertical bar on the left) */
 .link-bar {
-    background-color: #fff;
-    border-right: 3px groove black;
     height: 100%;
     width: 80px;
     position: absolute;
@@ -493,20 +375,23 @@ th {
 }
 
 /* Styles for the links */
+    .link-bar a {
+        margin-top: 40px;
+    }
+
     .link-bar a img {
         display: flex;
-        margin-top: 40px;
         max-height: 30px;
         max-width: 40px;
     }
 
         .link-bar a:first-child {
             display: flex;
-            margin-top: 75px;
+            margin-top: 115px;
         }
 
 #help-link {
-    margin-top: 16vh;
+    margin-top: 21vh;
 }
 
 .calendar-container {
@@ -540,7 +425,7 @@ th {
     }
 
     .event-calendar td, th {
-        padding: 10px 20px;
+        padding: 10px 10px;
     }
 
     .event-calendar td:nth-child(1) {
@@ -776,7 +661,6 @@ select option {
 }
 
 
-/* test */
 .dashboard {
     display: flex;
     flex-direction: column;
